--- a/DoAnWeb126/Web/public/frontend/css/Login.css
+++ b/DoAnWeb126/Web/public/frontend/css/Login.css
@@ -1,131 +1,91 @@
+
 body{
-    background-color: #ebebeb;
-  }
-  .bg_login{background:url('http://localhost:8080/DoAnWeb126//Web/public/frontend/img/bg_login.jpg') no-repeat;position: relative;height:100vh;background-size: 100%;}
-  .bg_login:after{content:'';position: absolute;width:100%;height:100%;background:rgba(0,0,0,0.8);z-index: 99;}
-  .login-box{ 
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    position: absolute;
-    background-color: white;
-    padding: 10px;
-    border-radius: 3px;
-    -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.33);
-  -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.33);
-  box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.33);
-  z-index: 9999;background-color: rgba(255,255,255,0.1);
-  }
-  .lb-header{
-    position:relative;
-    color: #00415d;
-    margin: 5px 5px 10px 5px;
-    padding-bottom:10px;
-    border-bottom: 1px solid #eee;
-    text-align:center;
-    height:28px;
-  }
-  .lb-header a{
-    color: rgba(255,255,255,0.8);
-    margin: 0 25px;
-    padding: 0 20px;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 15px;
-    -webkit-transition: all 0.1s linear;
-    -moz-transition: all 0.1s linear;
-    transition: all 0.1s linear;
-  }
-  .lb-header .active{
-    color: #029f5b;
-    font-size: 18px;
-  }
-  .social-login{
-    position:relative;
-    float: left;
-    width: 100%;
-    height:auto;
-    padding: 10px 0 15px 0;
-    border-bottom: 1px solid #eee;display: grid; grid-template-columns: repeat(2,1fr);grid-gap:30px;
-  }
-  .social-login a{
-    position:relative;
-    float: left;
-    width:100%;
-    text-decoration: none;
-    color: #fff;
-    border: 1px solid rgba(0,0,0,0.05);
-    padding: 12px;
-    border-radius: 2px;
-    font-size: 12px;
-    text-transform: uppercase;
-    text-align:center;
-  }
-  .social-login a i{
-    position: relative;
-    float: left;
-    width: 20px;
-    top: 2px;
-  }
-  .social-login a:first-child{
-    background-color: #49639F;
-  }
-  .social-login a:last-child{
-    background-color: #DF4A32;
-  }
-  .email-login,.email-signup{
-    position:relative;
-    float: left;
-    width: 100%;
-    height:auto;
-    margin-top: 20px;
-    text-align:center;
-  }
-  .u-form-group{
-    width:100%;
-    margin-bottom: 10px;
-  }
-  .u-form-group input[type="email"],
-  .u-form-group input[type="password"]{
-    width: calc(50% - 22px);
-    height:45px;
-    outline: none;
-    border: 1px solid #ddd;
-    padding: 0 10px;
-    border-radius: 2px;
-    color: #333;
-    font-size:0.8rem;
-    -webkit-transition:all 0.1s linear;
-    -moz-transition:all 0.1s linear;
-    transition:all 0.1s linear;
-  }
-  .u-form-group input:focus{
-    border-color: #358efb;
-  }
-  .u-form-group button{
-    min-width:110px;
-    background-color: black;
-    border: none;
-    outline: none;
-    color: #fff;
-    font-size: 14px;
-    font-weight: normal;
-    padding: 10px 0;
-    border-radius: 2px;
-    text-transform: uppercase;
-  }
+ margin: 0;
+ padding: 0;
+ background: url(../img/bg_login.jpg);
+ background-size: cover;
+ background-position: center;
+ font-family: Roboto, Helvetica, Arial, sans-serif;
+} 
+.login-box{
+ width: 320px;
+ height: 420px;
+ background: rgba(0, 0, 0, 0.5);
+ color: #fff;
+ top: 50%;
+ left: 50%;
+ position: absolute;
+ transform: translate(-50%,-50%);
+ box-sizing: border-box;
+ padding: 70px 30px;
+}
+.avatar{
+ width: 100px;
+ height: 100px;
+ border-radius: 50%;
+ position: absolute;
+ top: -50px;
+ left: calc(50% - 50px);
+}
+h1{
+ margin: 0;
+ padding: 0 0 20px;
+ text-align: center;
+ font-size: 22px;
+}
+.login-box p{
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+}
+.login-box input{
+ width: 100%;
+ margin-bottom: 20px;
+}
+.login-box input[type="email"], input[type="password"]
+{
+ border: none;
+ border-bottom: 1px solid #fff;
+ background: transparent;
+ outline: none;
+ height: 40px;
+ color: #fff;
+ font-size: 16px;
+}
+.login-box input[type="submit"]
+{
+ border: none;
+ outline: none;
+ height: 40px;
+ background: #1c8adb;
+ color: #fff;
+ font-size: 18px;
+ border-radius: 20px;
+}
+.login-box input[type="submit"]:hover
+{
+ cursor: pointer;
+ background: #39dc79;
+ color: #000;
+}
 
-  .u-form-group:hover button{
-    background-color: rgb(126, 126, 216);
-    cursor: pointer;
-  }
-  
-
-
-  .forgot-password{
-    width:50%;
-    text-align: left;
-    text-decoration: underline;
-    color: #888;
-    font-size: 0.75rem;
-  }
+.login-box a{
+ text-decoration: none;
+ font-size: 14px;
+ color: #fff;
+}
+.login-box a:hover{
+  color: #1c8adb;
+}
+#register
+{
+  padding-left: 30%;
+}
+.text_danger{
+  border: none;
+  background: transparent;
+  outline: none;
+  height: 20px;
+  color: darkorange;
+  font-size: 16px;
+}
