--- a/DoAnWeb126/Web/public/frontend/css/List_category.css
+++ b/DoAnWeb126/Web/public/frontend/css/List_category.css
@@ -136,12 +136,12 @@ border-top:2px solid #666;}
   display:block;
 }
 
-.Clothes_item a img{
+.Clothes_item a .image{
   transition: all ease 0.6s;
   
 }
 
-.Clothes_item:hover a img{transform: scale(1.3) rotate(10deg); filter: grayscale(25%);}
+.Clothes_item:hover a .image{transform: scale(1.3) rotate(10deg); filter: grayscale(25%);}
 
 .Clothes_list{
     display : grid;
@@ -153,6 +153,7 @@ border-top:2px solid #666;}
     border:1px solid white;
     text-align: center;
     cursor: pointer;
+    background-color: #ebebeb;
     
 }
 .clothes_name{
@@ -174,6 +175,7 @@ border-top:2px solid #666;}
 }
 .clothes_all{
   background-color: #ebebeb;
+  border-top:solid 1px black;
 }
 
 .main_containt_left{
@@ -197,13 +199,28 @@ border-top:2px solid #666;}
 }
 /*drop*/
 
-.Danhmuc{margin-bottom:15px;}
+.Danhmuc{
+  font-size: 20px;
+  color:#ebebeb;
+  font-weight:bold;
+}
 .Danhmuc b{
   font-size:23px;
   font-weight : bold;
   color:#ebebeb;
   margin-bottom: 10px;
 }
+
+.menu_sidebar{}
+.menu_sidebar >li > a{color:#ebebeb;font-size:15px;font-weight:bold;display:block;cursor: pointer;}
+.menu_sidebar >li{padding: 10px 0;border-bottom:1px solid #ebebeb;position: relative;}
+.menu_sidebar >li:after{content: ''; position: absolute; background: url(../img/arrow.png) no-repeat top center; background-size: 100%; 
+top: 12px; right: 10px; width: 20px; height: 20px;transition: all ease 0.6s;;}
+.menu_sidebar >li ul{display:none;padding-top: 10px; padding-left: 15px;}
+.menu_sidebar >li ul >li >a{color:#ebebeb;font-size:13px;}
+.menu_sidebar >li ul >li{margin-bottom:5px;}
+.liactive_side:after{transform: rotate(180deg);}
+.sidebar_option {color :#ebebeb}
 
 .login:hover{
   color:black;
@@ -248,6 +265,63 @@ border-top:2px solid #666;}
 
 .Item_content a{
   color:#ebebeb;
+}
+
+.big_img{
+  position: relative;
+}
+
+.clearfix::after { 
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.image2 {
+  position: absolute;
+  
+  right: 0;
+  bottom: 0; 
+  opacity: 0;
+  background-color: rgb(207, 205, 205);
+  transition: .5s ease;
+  width:100%;
+
+}
+.image2:hover{
+  background-color: #443b3b;
+}
+
+.big_img:hover .image2 {
+  opacity: 1;
+}
+
+.icon_image{
+  width:70px;
+  
+}
+
+
+.Clothes_item .big_img span{
+  position: absolute;
+  color:red;
+  top:42px;
+  left:-4px;
+  border-top :solid 1px black;
+  border-bottom:solid 1px black;
+  transform: rotate(-45deg);
+  font-weight:bold;
+  background-color: #ebebeb;
+  height:25px;
+  width:124px;
+  box-sizing: border-box;
+  font-size: 16px;
 }
 
 .dropbtn {
