--- a/DoAnWeb126/Web/public/frontend/css/Login.css
+++ b/DoAnWeb126/Web/public/frontend/css/Login.css
@@ -3,6 +3,7 @@ body{
  margin: 0;
  padding: 0;
  background: url(../img/bg_login.jpg);
+  background-repeat: no-repeat;
  background-size: fixed;
  background-position: center;
  font-family: Roboto, Helvetica, Arial, sans-serif;
@@ -79,7 +80,7 @@ h1{
 }
 #register
 {
-  padding-left: 30%;
+  padding-left: 25%;
 }
 .text_danger{
   border: none;
@@ -88,4 +89,10 @@ h1{
   height: 20px;
   color: darkorange;
   font-size: 16px;
+}
+#home
+{
+  display: block;
+  padding-left: 30%;
+  margin-top: 10px;
 }
