--- a/DoAnWeb126/Web/public/frontend/css/NoteStyle.css
+++ b/DoAnWeb126/Web/public/frontend/css/NoteStyle.css
@@ -108,6 +108,24 @@ transform: translate(-50%, 0px);transition: all ease 0.5s}
 .mm-wrapper_opening .showmenu_mobile a:after{border-bottom:none;transform: translate(-50%, 0px) rotate(45deg);top: 19px;left: 48%;}
 .mm-wrapper_opening .showmenu_mobile a:before{transform: translate(-50%, 0px) rotate(-45deg);bottom: 20px;}
 
+/*My Btn*/
+#myBtn{
+  position: fixed;
+  color:red;
+  border-radius: 15px;
+  background-color: #ebebeb;
+  z-index: 9999999;
+  bottom: 60px;
+  left:15px;
+  font-size: 20px;
+  
+  
+}
+#myBtn:hover{
+  width:60;
+  height:60;
+}
+
 
 
 @media (max-width: 1110px) {
