--- a/DoAnWeb126/Web/public/frontend/css/List_category.css
+++ b/DoAnWeb126/Web/public/frontend/css/List_category.css
@@ -280,19 +280,17 @@ top: 12px; right: 10px; width: 20px; height: 20px;transition: all ease 0.6s;;}
 .image {
   display: block;
   width: 100%;
-  height: auto;
+  height: 350px;
 }
 
 .image2 {
   position: absolute;
-  
   right: 0;
   bottom: 0; 
   opacity: 0;
   background-color: rgb(207, 205, 205);
   transition: .5s ease;
   width:100%;
-
 }
 .image2:hover{
   background-color: #443b3b;
