--- a/DoAnWeb126/Web/public/frontend/css/Details_product.css
+++ b/DoAnWeb126/Web/public/frontend/css/Details_product.css
@@ -111,16 +111,7 @@ a{text-decoration: none;}
 #button:hover {
   background-color: red;
 }
-/*Menu header*/
-.menu_sidebar >li > a{color:#ebebeb;font-size:15px;font-weight:bold;display:block;cursor: pointer;}
-.menu_sidebar >li{padding: 10px 0;border-bottom:1px solid #ebebeb;position: relative;}
-.menu_sidebar >li:after{content: ''; position: absolute; background: url(../img/arrow.png) no-repeat top center; background-size: 100%; 
-top: 12px; right: 10px; width: 20px; height: 20px;transition: all ease 0.6s;;}
-.menu_sidebar >li ul{display:none;padding-top: 10px; padding-left: 15px;}
-.menu_sidebar >li ul >li >a{color:#ebebeb;font-size:13px;}
-.menu_sidebar >li ul >li{margin-bottom:5px;}
-.liactive_side:after{transform: rotate(180deg);}
-.sidebar_option {color :#ebebeb}
+
 
 
 
@@ -301,6 +292,62 @@ border-top:2px solid #666;}
 }
 
 /*main_containt*/
+
+/*main_containt*/
+
+.Clothes_item2 a{
+  overflow: hidden;
+  display:block;
+  height: 250px;
+
+}
+
+.Clothes_item2 a .image{
+  transition: all ease 0.6s; 
+
+}
+
+.Clothes_item2:hover a .image{
+  transform: scale(1.3) rotate(10deg); 
+  filter: grayscale(25%);
+}
+
+.Clothes_list2{
+    display : grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 25px 25px;
+}
+
+.Clothes_item2{
+    border:1px solid white;
+    text-align: center;
+    cursor: pointer;
+
+}
+.clothes_name2{
+  font-size:19px;
+  margin: 1px;
+  font-weight:bold;
+  color:black;
+}
+.clothes_price2{
+  font-size:23px;
+   margin:1px;
+   font-weight:bold;
+   color: rgb(170, 46, 46);
+}
+
+.clothes_info2{
+  margin: 1px;
+  color:blue;
+  font-size:17px;
+}
+.clothes_all2{
+  background-color: #ebebeb;
+  text-align: center;
+  
+}
+
 
 
 .footer{    /*footer 1*/
