--- a/DoAnWeb126/Web/public/frontend/css/List_category.css
+++ b/DoAnWeb126/Web/public/frontend/css/List_category.css
@@ -166,6 +166,7 @@ border-top:2px solid #666;}
     display : grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 25px 25px;
+    margin-bottom: 30px;
 }
 
 .Clothes_item{
@@ -520,3 +521,21 @@ border-top:2px solid #666;}
 }
 /*footer 2*/
 
+
+@media (max-width: 1024px){
+  .main_containt_left{
+    width: 100%;
+  }
+  .main_containt_right{
+    display: none;
+  }
+}
+
+@media (max-width: 811px){
+  .main_containt_left{
+    width: 200%;
+  }
+  .main_containt_right{
+    display: none;
+  }
+}
